--- a/Pagina_B.html
+++ b/Pagina_B.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img src="https://encrypted-tbn0.gstatic.com/licensed-image?q=tbn:ANd9GcSJ8d4Nqh1j5UqCxwipt1pyMfjMMEA8S-dnsLLzv5VbfPqrk3Bpjh_gsT4aLPhRNNRSZ_BzieEVPCpB6mU" alt="" srcset="">
 </body>
 </html>
