--- a/Pagina_A.html
+++ b/Pagina_A.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href=".css">
 </head>
 <body>
+    <img src="https://encrypted-tbn2.gstatic.com/licensed-image?q=tbn:ANd9GcQZfvIrgWHnwMb69HpfINqslLuok8QQsHt09R86LCraxVUzOr24E18b0WSpjtjOlRB7eAvDBelSg31C_fo" alt="" srcset="">
     
 </body>
 </html>
