--- a/Pagina_A.html
+++ b/Pagina_A.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href=".css">
 </head>
 <body>
-    
+    <table>
+    <tr>
+        <td>1,1</td>
+        <td>1,2</td>
+    </tr>
+    <tr>
+        <td>2,1</td>
+        <td>2,2</td>
+    </tr>
+    </table>
 </body>
 </html>
