--- a/Pagina_B.html
+++ b/Pagina_B.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <table>
+  <tr>
+    <td>Celda 1.1</td>
+    <td>Celda 1.2</td>
+    <td>Celda 1.3</td>
+  </tr>
+  <tr>
+    <td>Celda 2.1</td>
+    <td>Celda 2.2</td>
+    <td>Celda 2.3</td>
+  </tr>
+    </table>
+
     
 </body>
 </html>
