--- a/INICIOP01.html
+++ b/INICIOP01.html
@@ -10,6 +10,9 @@
         <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.m
         in.js"></script>
+
+        <script src="scripts/script.js"></script>
+
     </head>
     <body>
         <p>Esto es un párrafo</p>
