--- a/INICIOP01.html
+++ b/INICIOP01.html
@@ -26,5 +26,15 @@
                 </ul>
             </div>
         </nav>
+        <table>
+            <tr>
+                <td>1,1</td>
+                <td>1,2</td>
+            </tr>
+            <tr>
+                <td>2,1</td>
+                <td>2,2</td>
+            </tr>
+        </table>
     </body>
 </html>
